--- a/her_album.html
+++ b/her_album.html
@@ -34,7 +34,7 @@
         <div class="image-item"><img src="img/hers/hers_21.jpg"></div>
         <div class="image-item"><img src="img/hers/hers_22.jpg"></div>
         <div class="image-item"><img src="img/hers/hers_23.jpg"></div>
-        <div class="image-item"><img src="img/hers/hers_24.jpg"></div>
+        <div class="image-item"><img src="img/hers/hers_24.jpeg"></div>
         <div class="image-item"><img src="img/hers/hers_25.jpeg"></div>
         <div class="image-item"><img src="img/hers/hers_26.jpeg"></div>
         <div class="image-item"><img src="img/hers/hers_27.jpeg"></div>
