--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             }
 
             // Register the service worker
-            navigator.serviceWorker.register('/path/to/your/service-worker.js')
+            navigator.serviceWorker.register('service-worker.js')
                 .then(registration => {
                     console.log('Service Worker registered with scope:', registration.scope);
 
