--- a/loveletter.html
+++ b/loveletter.html
@@ -16,19 +16,20 @@
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၀ -</div>
             <div class="note-body">
-                သစ်ရွက်သဏ္ဍန်သနပ်ခါးကွပ်လေးကို ပါးပေါ်တင်၊
-                ကုပ်အင်္ကျီပန်းနုရောင်လေးကို လက်မှာဆွဲ၊ "မနက်မနက်ဆို ကျွန်တော့်မှာ မမ ကိုတွေ့ရဖို့ တမင်နောက်ကျ
-                ပြီးမှ အိမ်ကထွက်ရတယ်"
-                အနီရောင်ဘေးသိုင်းကြိုးအိတ်လေးထဲ အနီရောင်ကာဗာလေးနဲ့ ဖုန်းကို နားကြပ်တပ်လျှပ်သားထည့်၊
-                မြန်မာ့ရင်ဖုံးအင်္ကျီဖြူ
-                လေးဝတ်ထားတဲ့ အသားညိုညိုနဲ့ မမ
-                နားထင်အောက်နားက အမာရွတ်ပိစိလေးကို ဖုံးဖို့ ရွှေအိုရောင် ဂုတ်ကွဲဆံပင်လေးကို ညာဆံချဟန်နဲ့ထား၊
+                သစ်ရွက်သဏ္ဍန်သနပ်ခါးကွပ်လေးကို ပါးပေါ်တင်၊<br>
+                ကုပ်အင်္ကျီပန်းနုရောင်လေးကို လက်မှာဆွဲ၊ <br>
+                "မနက်မနက်ဆို ကျွန်တော့်မှာ မမ ကိုတွေ့ရဖို့ တမင်နောက်ကျ
+                ပြီးမှ အိမ်ကထွက်ရတယ်"<br>
+                အနီရောင်ဘေးသိုင်းကြိုးအိတ်လေးထဲ အနီရောင်ကာဗာလေးနဲ့ ဖုန်းကို နားကြပ်တပ်လျှပ်သားထည့်၊<br>
+                မြန်မာ့ရင်ဖုံးအင်္ကျီဖြူလေးဝတ်ထားတဲ့ အသားညိုညိုနဲ့ မမ<br>
+                နားထင်အောက်နားက အမာရွတ်ပိစိလေးကို ဖုံးဖို့ ရွှေအိုရောင် ဂုတ်ကွဲဆံပင်လေးကို ညာဆံချဟန်နဲ့ထား၊<br>
                 ကုပ်တစ်ဖက်၊ထီးတစ်ဖက် အပြင်
-                တစ်ခါတစ်ရံ မနိုင်မနင်း စာအုပ်တွေလက်ကကိုင်လာပြီး ကားဂိတ်ကိုလျှောက်လာပုံ
-                "ဒါလေးကိုမြင်ချင်တာပါ"
+                တစ်ခါတစ်ရံ မနိုင်မနင်း စာအုပ်တွေလက်ကကိုင်လာပြီး ကားဂိတ်ကိုလျှောက်လာပုံ<br>
+                "ဒါလေးကိုမြင်ချင်တာပါ"<br>
                 ပါးပါးလွှာလွှာ နှုတ်ခမ်းလေးကိုချီ၊ ပါးကွပ်ကြားလေးထပ်ထား တဲ့ ပါးတွေကြွပြီး၊ သွားလေးစီပြီးရယ်လိုက်တဲ့
                 မမကတော့ မည်သည်ကို
-                ကျေနပ်သဘောကျမှန်း ကျွန်တော်မသိ၊ နှလုံးသားထဲမှာ ငလျင်တွေလှုပ်ပြီး ရောက်ယှက်တွေခက်၊ ပြန်တွေးရင်း သွားတွေ
+                ကျေနပ်သဘောကျမှန်း ကျွန်တော်မသိ၊<br>
+                နှလုံးသားထဲမှာ ငလျင်တွေလှုပ်ပြီး ရောက်ယှက်တွေခက်၊ ပြန်တွေးရင်း သွားတွေ
                 အအေးပတ်သည်ထိ
                 ဆက်ပြုံးနေမိ တာက ကျွန်တော်...</div>
         </div>
@@ -105,7 +106,6 @@
         <div class="note">
             <div class="note-title mynotes">- မျက်ဝန်း -</div>
             <div class="note-body">
-
                 မျက်လုံးတွေဟာ လူတစ်ယောက်နဲ့တစ်ယောက်ကိုမတူတဲ့ အမြင်တွေပေးနိုင်တယ်ဆိုတာကို ရှင်းပြဖို့
                 သူအတော်လေးခေါင်းရှုပ်နေမိတယ်၊
                 လူတွေဘယ်လိုပဲငြင်းနေပါစေ သူတို့မျက်လုံးထဲက Iris Pattern လို့ခေါ်တဲ့မျက်ဝန်းလေးကတော့
@@ -154,16 +154,14 @@
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၁ -</div>
             <div class="note-body">
-                တစ်ဆိုလို့ ခုမှစတာမဟုတ်ပါဘူး၊
-                ဖြစ်စဉ်တစ်ခုရဲ့ ပကတိအစကို တစ်လို့သတ်မှတ်မယ်ဆိုရင်...
-
-                သူမရဲ့ ပါးပြင်တွေကိုမေးကြည့်ပါ၊ ဒါမှမဟုတ် နှုတ်ခမ်းတွေဆိုရင်ရော?
-                သူမရဲ့ခါးလေးတွေကတော့ ကျွန်တော့ကိုသတိထားမိမှာပါ။
-                သူမမျက်ဝန်းတွေက ကျွန်တော်ကို မသိနိုင်ခဲ့ပေမယ့်လေ
-
-                အခုတော့ သူမမျက်ဝန်းတွေ ကျွန်တော့်မျက်ဝန်းနဲ့ဆုံပြီ
-                ဒါကို အစလို့ ကျွန်တော်သတ်မှတ်လိုက်မယ်
-
+                တစ်ဆိုလို့ ခုမှစတာမဟုတ်ပါဘူး၊<br>
+                ဖြစ်စဉ်တစ်ခုရဲ့ ပကတိအစကို တစ်လို့သတ်မှတ်မယ်ဆိုရင်...<br>
+                သူမရဲ့ ပါးပြင်တွေကိုမေးကြည့်ပါ၊ ဒါမှမဟုတ် နှုတ်ခမ်းတွေဆိုရင်ရော?<br>
+                သူမရဲ့ခါးလေးတွေကတော့ ကျွန်တော့်ကိုသတိထားမိမှာပါ။<br>
+                သူမမျက်ဝန်းတွေက ကျွန်တော်ကို မသိနိုင်ခဲ့ပေမယ့်လေ<br>
+                အခုတော့ သူမမျက်ဝန်းတွေ ကျွန်တော့်မျက်ဝန်းနဲ့ဆုံပြီ<br>
+                ဒါကို အစလို့ ကျွန်တော်သတ်မှတ်လိုက်မယ်<br>
+                <br>
                 22.10.2023
             </div>
         </div>
@@ -171,15 +169,15 @@
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၂ -</div>
             <div class="note-body">
-                သကြား ၂ဆ၊ ကော်ဖီ ၁ဆ
-                ရေခဲများများနဲ့ရောမွေထားတဲ့ ကော်ဖီတစ်ခွက်
-                ဒီလိုသူသောက်တိုင်း ကျွန်တော့်ရင်ထဲမှာဘဝင်မကျ
-                ကော်ဖီဟာပူသင့်တယ်မလား
-                ဒါဟာ သဘာဝလောကကိုဆန့်ကျင်နေတာပဲ
-                ဒါဟာ ပြစ်မှုမမြှောက်ပေဘူးလား
-                သို့သော် ကြည့်ပါဦး...
-                သူ့မျက်ဝန်းတွေကတော့ အပြစ်မဲ့လှပါရဲ့။
-
+                သကြား ၂ဆ၊ ကော်ဖီ ၁ဆ<br>
+                ရေခဲများများနဲ့ရောမွေထားတဲ့ ကော်ဖီတစ်ခွက်<br>
+                ဒီလိုသူသောက်တိုင်း ကျွန်တော့်ရင်ထဲမှာဘဝင်မကျ<br>
+                ကော်ဖီဟာပူသင့်တယ်မလား<br>
+                ဒါဟာ သဘာဝလောကကိုဆန့်ကျင်နေတာပဲ<br>
+                ဒါဟာ ပြစ်မှုမမြှောက်ပေဘူးလား<br>
+                သို့သော် ကြည့်ပါဦး...<br>
+                သူ့မျက်ဝန်းတွေကတော့ အပြစ်မဲ့လှပါရဲ့။<br>
+                <br>
                 23.10.2023
             </div>
         </div>
@@ -187,32 +185,32 @@
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၃ -</div>
             <div class="note-body">
-                ဟျောင့် မင်းမမလာတယ်ကွ
-                ခါတိုင်းလိုပဲ ကျက်သရေရှိတယ်, လှတယ်ကွ
-                လူတွေကိုဝင်တိုက် ကမ္ဘာ့ချန်ပီယံ အူစိန်ဘော့လို ကျွန်တော်ပြေး
-                ဟော တွေ့ပြီ
-                ဟုတ်ပ ကျက်သရေရှိပါ့ဗျာ
-                တော်ပြီလေ ကျုပ်သွားနိုင်တာ ဒီနေရာထိပဲမလား
-                ပြေးလာရတာ အမောပြေပြီပဲကို
-
-                24.10.2023
+                ဟျောင့် မင်းမမလာတယ်ကွ<br>
+                ခါတိုင်းလိုပဲ ကျက်သရေရှိတယ်, လှတယ်ကွ<br>
+                လူတွေကိုဝင်တိုက် ကမ္ဘာ့ချန်ပီယံ အူစိန်ဘော့လို ကျွန်တော်ပြေး<br>
+                ဟော တွေ့ပြီ<br>
+                ဟုတ်ပ ကျက်သရေရှိပါ့ဗျာ<br>
+                တော်ပြီလေ ကျုပ်သွားနိုင်တာ ဒီနေရာထိပဲမလား<br>
+                ပြေးလာရတာ အမောပြေပြီပဲကို<br>
+                <br>
+                24.10.2023<br>
             </div>
         </div>
 
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၄ -</div>
             <div class="note-body">
-                ရောက်ပြီ
-                ချိန်းထားတဲ့အတိုင်း lobbyကို ရောက်ပြီ
-                ရင်ခုန်တယ် မမရေ
-                ရင်ခုန်တာမြန်ရင် အသက်အမြန်ကြီးမှာလား
-                မဟုတ်သေးဘူး၊ အချိန်တွေကြတော့ ပိုကြာနေသလိုပဲ...
-                ရောက်ပြီ သူမလည်းရောက်လာပြီ
-                ကြည့်ပါဦး လှလိုက်တဲ့အပြုံး
-                လက်လှမ်းပြနေတာပဲ... ဘယ်သူ့ကိုလဲ..?
-                အော် ငါ့ကိုပဲ
-                ငါ ဒီအပြုံးကို ထာဝရမြင်ရပါစေကွာ။
-
+                ရောက်ပြီ<br>
+                ချိန်းထားတဲ့အတိုင်း lobbyကို ရောက်ပြီ<br>
+                ရင်ခုန်တယ် မမရေ<br>
+                ရင်ခုန်တာမြန်ရင် အသက်အမြန်ကြီးမှာလား<br>
+                မဟုတ်သေးဘူး၊ အချိန်တွေကတော့ ပိုကြာနေသလိုပဲ...<br>
+                ရောက်ပြီ သူမလည်းရောက်လာပြီ<br>
+                ကြည့်ပါဦး လှလိုက်တဲ့အပြုံး<br>
+                လက်လှမ်းပြနေတာပဲ... ဘယ်သူ့ကိုလဲ..?<br>
+                အော် ငါ့ကို<br>
+                ငါ ဒီအပြုံးကို ထာဝရမြင်ပါရစေကွာ။<br>
+                <br>
                 25.10.2023
             </div>
         </div>
@@ -220,14 +218,83 @@
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၅ -</div>
             <div class="note-body">
-                နူးညံ့တဲ့အထိအတွေ့၊ သာယာတဲ့မင်းရဲ့ငြီးသံလေး
-                ကိုယ်ကြည်နူးရတယ် ဟန်နီ
-                ရယူခြင်းမဟုတ်တဲ့အချစ်ဟာ အေးချမ်းတယ်တဲ့
-                ဟန်နီရေ ကိုယ်ဟာမီးလိုလောင်မှိုက်ပြီးပူခံလိုက်ပါမယ်
-                မင်းကိုသိပ်လိုချင်တယ်
+                နူးညံ့တဲ့အထိအတွေ့၊ သာယာတဲ့မင်းရဲ့ငြီးသံလေး<br>
+                ကိုယ်ကြည်နူးရတယ် ဟန်နီ<br>
+                ရယူခြင်းမဟုတ်တဲ့အချစ်ဟာ အေးချမ်းတယ်တဲ့<br>
+                ဟန်နီရေ ကိုယ်ဟာမီးလိုလောင်မှိုက်ပြီးပူခံလိုက်ပါမယ်<br>
+                မင်းကိုသိပ်လိုချင်တယ်<br>
+                <br>
+                26.10.2023<br>
             </div>
         </div>
 
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၆ -</div>
+            <div class="note-body">
+                ဆောင်းရာသီမှာ ပွင့်တက်ပြီး<br>
+                မိုးအကုန်မှာကြွေတဲ့ခရေ<br>
+                ဒီပန်းတွေသူ့ခေါင်းမှာဝေနေအောင်<br>
+                ကျုပ်ပန်ပေးချင်တယ် အမေ<br>
+                <br>
+                27.10.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၇ -</div>
+            <div class="note-body">
+                လွမ်းဆွတ်ခြင်းဟာ နာရီလက်တံများကိုနှေးကွေးေစတယ်<br>
+                တောင့်တစိတ်ဟာ ရင်ကိုစို့နင့်စေပြီ<br>
+                သတိရလို့ သူပေးထားတဲ့စာအိတ်လေးကိုထုတ်အဖတ်<br>
+                ရလိုက်ရပြန်ပြီ သူ့ကိုယ်သင်းနံ့ကလေး<br>
+                ဒါဟာလည်း အလွမ်းကိုပိုစေပြီပေါ့<br>
+                <br>
+                28.10.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၈ -</div>
+            <div class="note-body">
+                I thought much about us before went on writing this letter. That we had an arguement. You may had a bad
+                day when I had to go aganist everyone and it was terrible. I was ready to lost every single person in my
+                life as I no longer want them to keep but you, I wanted You. <br>
+                Until I read your sms that you were planning for a beer meet with your male friend and I went numb. I
+                couldn't speak or do anything. I feel like I lost everything. Maybe I'm overreacting or Maybe it's real
+                but how cares. I was dead alive all alone for whole night. I don't wanna lose you. You are all I have.
+                So please, please don't love someone again. I'm begging you.
+                <br>
+                29.10.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၉ -</div>
+            <div class="note-body">
+                မင်းရဲ့နှလုံးသားကိုငါ့ဆီမှသိမ်းထားပါရစေ<br>
+                ငါ့ရဲ့ကိုယ်နဲ့မကွာ..<br>
+                ဘယ်သွားသွား၊ ဘာလုပ်လုပ်<br>
+                မင်းကို အမြဲသတိရနေပါ့မယ်<br>
+                <br>
+                30.10.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၀ -</div>
+            <div class="note-body">
+                မင်းကိုငါဘယ်လိုချစ်ရမလဲ<br>
+                စဉ်းစားမိသလောက်ကတော့ အများသား...<br>
+                - အချစ်တွေအကုန်ထုတ်ပြမယ်<br>
+                - ဂရုစိုက်နွေးထွေးပေးမယ်<br>
+                - မင်းအကြိုက်လိုက်လုပ်မယ်<br>
+                - ခွင့်လွှတ်အရှုံးပေးမယ်<br>
+                - မင်းကို ငါ့ကိုယ်ကိုထက်ပိုချစ်မယ်<br>
+                ဒါဟာအဆုံးစွန်ပဲ မိန်းကလေးရေ...<br>
+                <br>
+                31.10.2023<br>
+            </div>
+        </div>
 
         <!-- Add more notes here -->
     </div>
