--- a/loveletter.html
+++ b/loveletter.html
@@ -296,6 +296,77 @@
             </div>
         </div>
 
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၁ -</div>
+            <div class="note-body">
+                မမရေ<br>
+                မမရေ ...<br>
+                လတစ်လထပ်ကူးပြန်ပြီနော်<br>
+                ဒီလမှာဆို မမရဲ့အချစ်ကိုရတာ ၃လပြည့်တော့မှာပဲ<br>
+                မတွေ့ရတဲ့အချိန်ဟာသိပ်ကြာတယ်<br>
+                တကယ်ဆို မောင်တို့ဟာ အနီးလေးပဲ<br>
+                ပြေးတွေ့ချင်မိတယ် မမရေ...<br>
+                <br>
+                1.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၂ -</div>
+            <div class="note-body">
+                ဇော်ပိုင်ရဲ့ သီချင်းလိုပါပဲ<br>
+                "နေတာအချိန်တွေကြာလာလေ တွယ်တာ တာတွေပိုလာလေ"<br>
+                မခွဲချင်တော့တဲ့ လူတစ်ယောက်ရှိလာခဲ့ပြီဆိုတဲ့အသိ<br>
+                ဒီရင်ကြီးကိုခွဲပြရင်တောင် လူတွေမြင်ပါ့မလား<br>
+                မောင့်အချစ်တွေ ကမ္ဘာတည်သရွေ့မြဲပါတယ်အချစ်ရယ်<br>
+                <br>
+                2.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၃ -</div>
+            <div class="note-body">
+                ရေတိုင်ကီမှာ အပေါက်ရှိတဲ့အခြေအနေလို<br>
+                နှလုံးသားဆီအချစ်ရောက်တဲ့အခါ<br>
+                မင်းအကြောင်းကိုမပြတ်အစဥ်တွေးမိတယ်<br>
+                ငါ့ကိုယ်ထဲက သွေးတွေခမ်းသွားမလား<br>
+                ငါ့သွေးကြောတွေပေါက်ထွက်လာမလား<br>
+                ဘယ်အရာကတားနိုင်မလဲ<br>
+                ဘယ်အရာကတားနိုင်မလဲဟေ့<br>
+                သေတဲ့အထိချစ်မယ်<br>
+                တားချင်သလိုတားကြလေ<br>
+                <br>
+                3.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၄ -</div>
+            <div class="note-body">
+                လက်ဖဝါးကိုဖြန့် အနာဂတ်လမ်းကြောင်းကိုကြည့်ပေးပါ<br>
+                ကျုပ်ဘယ်လောက်အသက်ရှည်မလဲ<br>
+                မမနဲ့အမြဲနီးဖို့ရာဘယ်လားကိုသွားရမလဲ<br>
+                လိုအပ်ရင် ဟော့ဒီမှာ သင်တုန်းဓား<br>
+                မဖြစ်ဖြစ်အောင် လမ်းဖောက်ပေးပါ<br>
+                <br>
+                4.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၅ -</div>
+            <div class="note-body">
+                ခင်ဗျားတို့ပြောတဲ့ ဘာမှမဟုတ်တဲ့ကောင်<br>
+                သူ့ကို သူသိပ်ချစ်ရတဲ့ကောင်မလေးက<br>
+                မနက်ဖြန်ဆို လက်စွပ် စွပ်ပေးတော့မတဲ့<br>
+                ကဲ ဒီကောင် တစ်ခုခုဖြစ်လာပြီမလား<br>
+                ကျုပ် ဘဝတစ်ခုရပြီမလား<br>
+                <br>
+                5.11.2023<br>
+            </div>
+        </div>
+
         <!-- Add more notes here -->
     </div>
 
