--- a/loveletter.html
+++ b/loveletter.html
@@ -367,6 +367,147 @@
             </div>
         </div>
 
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၆ -</div>
+            <div class="note-body">
+                မာရ်နတ်က မြူစွယ်ကာ ဖမ်းခေါ်ထားတာလား<br>
+                ယနေ့ဟာ မမနဲ့တွေ့ဖို့ချိန်းထားကာကို ကျုပ်နောက်ကျမှနိုးပြီ<br>
+                ပြာသီပြာယာ တစ်ကိုယ်ရည်သန့်စင်<br>
+                ပြီး၊ ကျုပ်ပြေးထွက်လာပြီ မမရှိရာ<br>
+                ဟော ဟိုမှာ ကျုပ်နောက်ကျလို့ပျင်းနေပြီထင်ပါရဲ့<br>
+                သိပ်ချစ်စရာကောင်းတဲ့သူမကြောင့် ပြုံးဖြီးလာတဲ့မျက်နှာက်ိုလက်နဲ့ပွတ်<br>
+                "မျက်နှာပိုးသတ်ကွ မင်းနောက်ကျမှရောက်တာ"<br>
+                မမအနားကိုရောက်တော့ ကျုပ်ရဲ့ရင်ခုန်သံတွေဟာ သန်ဆဲ၊မြန်ဆဲ<br>
+                မမဟာ ပေါ့ပေါ့ပါးပါး တီရှပ်နဲ့ဘောင်းဘီအပွခပ်တိုတိုကိုဝတ်ထားတယ်<br>
+                ကျုပ်လက်ကိုဆွဲယူပြီး သိမ်းဖက်ထားလိုက်တယ်<br>
+                သာယာလိုက်တာ၊ ဒီကမ္ဘာမှာ ဒီခံစားချက်ဟာ သိပ်တန်ဖိုးကြီးတယ်မဟုတ်လား<br>
+                နေပူပူမှာ ထီးတစ်ချောင်းကို နှစ်ယောက်တူတူစောင်းရမယ့် မမဟာအပြုံးမပျက်<br>
+                အပြန်မှာ တံတားတစ်ခုအပေါ်ဝင်နားကြတယ်<br>
+                နေအေးပြီးတိတ်ဆိတ်တယ်၊ ပြီးတော့ အချစ်တွေကြွ, ရာဂတွေတက်လာတယ်<br>
+                ကဲ ကျုပ်ဟာ မမနဲ့တွေ့မှ သိပ်ကိုအရိုင်းဆန်လာခဲ့တယ်<br>
+                <br>
+                6.11.2023<br>
+            </div>
+        </div>
+
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၇ -</div>
+            <div class="note-body">
+                လူ့စိတ်ဟာဆန်းကျယ်တယ်ဆိုတာထက်ကိုပိုတယ်<br>
+                ကျုပ်တို့မတွေ့ခင်ကလွမ်းနေသည်ထက်<br>
+                ယခုတွေ့ပြီးပြန်လာသည့်အခါ မမကို နှစ်ဆတိုးကာ ပို၍လွမ်းနေမိတယ်<br>
+                ဒီနေ့ ကောင်းကင်ကြီးဆီမှာ မမကိုမေးဖြစ်တယ်<br>
+                သီချင်းတွေထဲမှာလည်း မမကိုလိုက်ရှာဖြစ်တယ်<br>
+                မမဟာ တကယ့်တော့ မောင့်ရင်ထဲမှာပါပဲ<br>
+                <br>
+                7.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၈ -</div>
+            <div class="note-body">
+                တွေ့ရတော့မယ်<br>
+                နောက်တစ်ခေါက်တွေ့ရတော့မယ်<br>
+                တစ်ခါတစ်ခါကို နှစ်တွေချီပြီးကြာသည့်နှယ် စောင့်ရသော်လည်း<br>
+                တွေ့ရတော့မယ်<br>
+                ဒီတစ်ခါကျုပ်က အကောင်းဆုံးဖြစ်မယ်လို့ ကြွေးကြော်ထားတယ်<br>
+                ဟုတ်တယ်မလား ကျုပ်ဖြစ်နိုင်တာပဲ<br>
+                <br>
+                8.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၁၉ -</div>
+            <div class="note-body">
+                တိတ်ဆိတ်မှုဟာ ရင်ဘက်ထဲကို အီကနဲဖိဝင်သွားတယ်<br>
+                နာကျင်ရမှန်းလည်းကျုပ်မသိလိုက်<br>
+                ပြန်တွေးစရာလည်းဖြစ်ရပ်မရှိ<br>
+                ဆက်သွားစရာလည်းလမ်းမမြင်<br>
+                ကျုပ်ဘာကြောင့် မှိုင်ထွေနေရလဲ <br>
+                မမကယ်ပါ...ဘုရားကယ်ပါ...<br>
+                <br>
+                9.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၀ -</div>
+            <div class="note-body">
+                မမကသိပ်အံ့သြဖို့ကောင်းတာ<br>
+                စတွေ့တဲ့နေ့က သူ့အမူအရာတွေလိုပေ့ါ<br>
+                ကျုပ်ဖြင့်မတွေးမိခဲ့ဖူးပေါင်<br>
+                ခုလည်းကျုပ်ကိုပြောတယ်<br>
+                နင့်ရဲ့ချစ်တယ်ဆိုတာကို သံသယဖြစ်တယ်တဲ့<br>
+                ဟောဗျာ.. ဒါဖြင့် ကျုပ်မအံ့သြပါဘူး<br>
+                ဒီစာကိုတောင် ဘယ်အစုံက ရင်အုံကို ဖိကိုင်ပြီးရေးလိုက်ရတယ်<br>
+                ကျုပ်ဖြင့်မအံ့သြနိုင်ပါဘူး<br>
+                <br>
+                10.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၁ -</div>
+            <div class="note-body">
+                I left you yesterday with a torn heart. I've been waiting all afternoon for your phone call. In the
+                evening, I understood even better how much I didn't own you. There was a terrible knotted thing in me. I
+                couldn't talk. I know it's not your fault. but what do you want to about this pain that takes me when I
+                measure everything that separates you from me?<br>
+
+                _Albert Camus to Maria Casares
+                <br>
+                11.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၂ -</div>
+            <div class="note-body">
+                English အဘိဓာန်မှာ Happiness<br>
+                မြန်မာ့ အဘိဓာန်မှာ ပျော်ရွှင်မှု<br>
+                ကျုပ်ရဲ့ အဘိဓာန်မှာ မမပေါ့ဗျာ<br>
+                မမဆိီက စစ်ပြေငြိမ်းစာရတော့မှ<br>
+                ကျုပ်မှာ အလုံးစုံစိတ်အေးရတယ်<br>
+                စစ်ကိုမလို၍ အချစ်ပိုမှသာ ကျုပ်တို့<br>
+                ထာဝရလက်တွဲနိုင်မယ် မဟုတ်လား<br>
+                ပျော်ရပါတယ်<br>
+                <br>
+                12.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၃ -</div>
+            <div class="note-body">
+                မမသိလား<br>
+                ကျုပ်ဖြင့် အဲ့ပစ္စည်းဝယ်ဖို့<br>
+                စိတ်ငြိမ်အောင်လည်း သတိကပ်ခဲ့ရ<br>
+                ဆိုင်ရှေ့တွေမှာလည်း ရစ်သီသီ<br>
+                ဘာမှမဆိုင်ပဲ မလိုတဲ့ပစ္စည်းတွေလည်းဝယ်ပြီးပြန်ထွက်ခဲ့ရ<br>
+                ဒါတွေအားလုံးဟာ အမှတ်တရပါပဲ<br>
+                ခုတော့ တစ်ဆင့်တိုးပြီပေါ့<br>
+                <br>
+                13.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၄ -</div>
+            <div class="note-body">
+                စိတ်ပူတယ်<br>
+                ကျုပ်ရေးနေတဲ့ appဟာလည်း အပြီးမသတ်သေး<br>
+                တွေ့ရတော့မယ့် မနက်ဖြန်တွက်လည်း ကျုပ်အဆင်သင့်မဖြစ်သေး<br>
+                ကျုပ်ဘာလုပ်နိုင်မလဲ<br>
+                ဟုတ်တယ် တွေးရမယ်, တွေးလို့ရသလောက်ကိုချရေးမယ်<br>
+                ရေးထားတာအကုန်လုပ်မယ်<br>
+                <br>
+                14.11.2023<br>
+            </div>
+        </div>
+
         <!-- Add more notes here -->
     </div>
 
