--- a/loveletter.html
+++ b/loveletter.html
@@ -261,7 +261,7 @@
                 life as I no longer want them to keep but you, I wanted You. <br>
                 Until I read your sms that you were planning for a beer meet with your male friend and I went numb. I
                 couldn't speak or do anything. I feel like I lost everything. Maybe I'm overreacting or Maybe it's real
-                but how cares. I was dead alive all alone for whole night. I don't wanna lose you. You are all I have.
+                but who cares. I was dead alive all alone for whole night. I don't wanna lose you. You are all I have.
                 So please, please don't love someone again. I'm begging you.
                 <br>
                 29.10.2023<br>
@@ -346,7 +346,7 @@
             <div class="note-body">
                 လက်ဖဝါးကိုဖြန့် အနာဂတ်လမ်းကြောင်းကိုကြည့်ပေးပါ<br>
                 ကျုပ်ဘယ်လောက်အသက်ရှည်မလဲ<br>
-                မမနဲ့အမြဲနီးဖို့ရာဘယ်လားကိုသွားရမလဲ<br>
+                မမနဲ့အမြဲနီးဖို့ရာဘယ်လမ်းကိုသွားရမလဲ<br>
                 လိုအပ်ရင် ဟော့ဒီမှာ သင်တုန်းဓား<br>
                 မဖြစ်ဖြစ်အောင် လမ်းဖောက်ပေးပါ<br>
                 <br>
@@ -450,7 +450,7 @@
         </div>
 
         <div class="note">
-            <div class="note-title mama">- မမဖတ်ဖို့ ၂၁ -</div>
+            <div class="note-title mama crd">- မမဖတ်ဖို့ ၂၁ -</div>
             <div class="note-body">
                 I left you yesterday with a torn heart. I've been waiting all afternoon for your phone call. In the
                 evening, I understood even better how much I didn't own you. There was a terrible knotted thing in me. I
@@ -505,6 +505,48 @@
                 ရေးထားတာအကုန်လုပ်မယ်<br>
                 <br>
                 14.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၅ -</div>
+            <div class="note-body">
+                အစီအစဥ်တွေရှိတယ်ကွ<br>
+                စာရွက်ကြီးကို လက်ကကိုင်မြှောက်ပြ<br>
+                ဒီတိုင်းလုပ်ရင်ဖြစ်ပြီ<br>
+                ...<br>
+                မှန်းချက် နဲ့ နှမ်းထွက်ဟာမကိုက်ခဲ့<br>
+                ဒါဟာ ဘဝပဲ<br>
+                ဘဝဆိုတာ ဒီလိုပဲကွ<br>
+                <br>
+                15.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၆ -</div>
+            <div class="note-body">
+                မနက် ၉နာရီမှာ နေထွက်တယ်<br>
+                ညနေ ၆နာရီမှာ နေပြန်ဝင်တယ်<br>
+                ည ၇နာရီမှာ လထွက်တယ်<br>
+                သာမာန်ပါပဲ အသက်ရှုချိန်းတိုင်းဟာ<br>
+                မမကိုလွမ်းဖို့ပဲ<br>
+                <br>
+                16.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၇ -</div>
+            <div class="note-body">
+                စစ်ဆိုတာ အပျက်သဘောပဲဆောင်တယ်<br>
+                ကျုပ်ကတော့ ဒါမျိုးကြုံရင်,<br>
+                မမဆီကိုပြေးသွားမယ်<br>
+                ကျုပ်အရိုးတွေနဲ့ ခံတပ်ဆောက်မယ်<br>
+                ကျုပ်အသားကိုစားစေပြီး ကျုပ်သွေးကိုတိုက်မယ်<br>
+                ကျိန်းသေပေါက် မမဘေးကင်းရမယ်<br>
+                <br>
+                17.11.2023<br>
             </div>
         </div>
 
