--- a/loveletter.html
+++ b/loveletter.html
@@ -529,7 +529,7 @@
                 မနက် ၉နာရီမှာ နေထွက်တယ်<br>
                 ညနေ ၆နာရီမှာ နေပြန်ဝင်တယ်<br>
                 ည ၇နာရီမှာ လထွက်တယ်<br>
-                သာမာန်ပါပဲ အသက်ရှုချိန်းတိုင်းဟာ<br>
+                သာမာန်ပါပဲ အသက်ရှုချိန်တိုင်းဟာ<br>
                 မမကိုလွမ်းဖို့ပဲ<br>
                 <br>
                 16.11.2023<br>
