--- a/loveletter.html
+++ b/loveletter.html
@@ -13,6 +13,123 @@
 
 <body>
     <div class="notes-container">
+
+        <div class="note">
+            <div class="note-title mama things">- Things I Love About You -</div>
+            <div class="note-body">
+                - မြင်မြင်ချင်းသဘောကျမိပြီး ကလေးဘဝမှာပင် အချစ်ဆိုတဲ့စိတ်မျိုးခဏတာ ခံစားမိစေခဲ့တာကြောင့်
+
+                - မမကို လာမပြောပေမယ့် မောင့်ဘက်က ကြိုက်နေခဲ့ရတာကြာခဲ့ပြီ။ အချိန်အကြာကြီး သဘောကျဖူးတဲ့သူမလို့
+                တစ်မျိုးပိုပြီးသဘောကျရတယ်။
+
+                - မမ နဲ့ မောင်နဲ့မှာ တူတာတွေအများကြီးပဲ။ သောကြားဖွားခြင်းတူတာတို့ အကြိုက်အများစုတူပြီး ကြုံခဲ့ရတဲ့
+                ဘဝအချို့တောင်အနည်းငယ်တူနေကြသေးတယ်နော်။
+
+                - မမရဲ့ အပြုံးလေးတွေ... မရိုးနိုင်လောက်အောင် ရင်ထဲကို စူးနစ်သွားပြီး ရင်ခုန်သံတွေအမြဲမြန်လာရတယ်
+
+                - အရက် နဲ့ ဆေးလိပ် တူတူ သောက်ပေးတာလည်း တကယ်သဘောကျတယ်
+
+                - အချိန်တိုလေးအတွင်းမှာ တစ်ယောက်နဲ့တစ်ယောက် နားလည်မှုအပြည့်ယူထားနိုင်တာလည်း ကျေနပ်မိတယ်
+
+                - မမက မောင့်ကိုအချစ်ဆုံပါ, မောင့်ကိုပဲယူမှာ, မောင့်တစ်ယောက်တည်းပဲချစ်တယ်လို့ ပြောတဲ့အချိန်တိုင်းက
+                မောင့်အတွက် ပျော်ရွင်ခြင်းအတိဖြစ်ရပါတယ်
+
+                - မောင့်မမ ငပျင်းလေးက တူတူနေရင် ဟင်းချက်ကျွေး မောင့်ကို ဂရုစိုက်ပေးမယ်ဆိုတာလေးကလည်း
+                တကယ်ကြည်နူးစရာကောင်းနေပြန်ရော
+
+                - မမက ကလေးလေးလိုလည်းသိပ်မချွဲဘူး, လူကြီးတစ်ယောက်လိုလည်းမတည်ငြိမ်နိုင်ပြန်ဘူး။ ဒါပေမယ့်
+                မမဆီမှာအဲ့လိုအရာအားလုံးကို အခြေအနေပေါ်မူတည်ပြီးတွေ့ရတယ် ဒါလည်းကောင်းတာပဲမလား
+
+                - မောင့်ကို မမရဲ့ မိသားစုဝင်တွေနဲ့ တဖြည်းဖြည်းမိတ်ဆက်ပေးတာကလည်း မမရဲ့
+                မောင့်အပေါ်အလေးထားတဲ့စိတ်လို့မြင်တယ်
+
+                - ခက်ခဲနေပေမယ့် မောင့်ဘက်မှာနေပေးပြီး တူတူဖြတ်သန်းကြမယ်လို့ အားပေးဖော်ရလို့ပျော်ရတယ်
+
+                - နောက်ဆုံးအနေနဲ့ အပြစ်အနာအဆာသိပ်များတဲ့ မောင့်ကိုချစ်ပေးလို့ ကျေးဇူးပါ မမရေ
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama read">- Read This When You're tired -</div>
+            <div class="note-body read">
+                ဟန်နီရေ ပင်ပန်းနေပြီလား
+                အများကြီးကြိုးစားထားတာပဲ အားတင်းထားဦးလေကွာ
+                မောင်လည်း မမအနားမှာရှိနေပေးမယ်
+                မောင်ကူနိုင်တာရှိတာအကုန်ကူညီပေးမှာမလို့
+                မောင့်ကိုဖွင့်ပြောပြီးတိုင်ပင်ပေးနော်
+                ဘဝဆိုတာ မကြာခဏ ပင်ပန်းပြီး အရှုံးပေးချင်စရာကောင်းတယ်
+                ဒါမယ့် မောင်တို့တူတူနေရမယ့်အချိန်လေးတွေကိုတွေးပြီးအားတင်းထားနော်
+                ပေါ့ပေါ့ပါးပါးနဲ့ရယ်ရမယ့် ဇတ်ကားလေးရှာကြည့်(ရှာမတွေ့ရင် မောင့်ကိုလာမေး)
+                ဇာတ်ကားလေးကြည့် မုန့်လေးစားရင်း သေချာအနားယူ မမ
+                It's okay to run from everything sometimes, It's okay to take a nap.
+                It's okay to take a pause so that you can find yourself back.
+                မမကတော်ပါတယ် ဖိုက်တင်း
+                You can do it Honey...
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama read">- Read This When You're Sad -</div>
+            <div class="note-body read">
+                အချစ်ဆုံးလေးဝမ်းနည်းနေတာလား?
+                ဘာလို့လဲ အိမ်ကဆူလို့လား?
+                လူကြီးတွေဆိုတာအဲ့လိုပါပဲအချစ်ရယ်
+                ဆူတုန်းခဏပဲ ပြီးရင် ဘာမှမဖြစ်ထားသလိုပဲပြန်ဖြစ်သွားမှာ
+                ခဏလေးပဲ အဲ့တာကြောင့် အရမ်းကြီးဝမ်းနည်းနေနဲ့
+                မမလုပ်စရာတွေလည်းမပျက်စေနဲ့
+                သီချင်းလေးနားထောင်ရင်း လုပ်စရာတွေဆက်လုပ်...နော်။
+
+                ဒါမှမဟုတ် မောင့်ကြောင့်လား?
+                မောင်က မမကိုဆူလိုက်လို့လား,မမကိုပစ်ထားလို့လား?
+                ဟေး ဟန်နီ, မမက မောင့်ဘဝမှာ အလိုချင်ဆုံးတစ်ယောက်တည်းသူနော်
+                မမကိုဆူမိရင်လည်းတောင်းပန်ပါတယ်
+                ရန်ဖြစ်ပြီးရင်လည်း မောင်ပြန်ချော့မယ်နော်
+                ဝမ်းနည်းနေနဲ့တော့ လာမောင့်ဆီပြန်လာခဲ့ အာဘွားပေးပြီးဖက်ထားမယ်
+
+                တစ်ခြားသူတွေကြောင့် ဝမ်းနည်းနေရတာဆိုရင်တော့ မောင့်ဆီပိုပြီးမြန်မြန်လေးပြေးလာခဲ့
+                နှစ်ယောင်ပေါင်းပြီး သွားကြိတ်ကြမယ်
+                အိုကေ?
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama read">- Read This When You Miss Me -</div>
+            <div class="note-body read">
+                မတွေ့ရတာဘယ်နှစ်ရက်တောင်ကြာပြီလဲအချစ်?
+                မောင့်ရင်ထဲမှာတော့မမကိုသတိမရတဲ့နေ့တစ်ရက်မှမရှိပါဘူး
+                skincareတွေသုံးထား မောင်နဲ့တွေ့တဲ့ချိန်လှလှလေးဖြစ်ချင်ရင်
+                မကြာခင်ပြန်တွေ့မယ်နော်
+                မအားလည်း အားအောင်လုပ်ကြတာပေါ့
+                မောင့်ဘဝမှာ မမပဲအရေးပါတာ မောင်ကတော့ မမတွေ့ချင်တယ်ဆိုရင် ရအောင်လာတွေ့မှာပဲ
+                ပြန်တွေ့တဲ့နေ့ကြရင် မမဆီပြေးလာပြီး ဖက်ထားပေးမယ်
+                အချစ်လေးအရမ်းလွမ်းနေလို့ မောင့်ရင်ခွင်ထဲမှာငိုချင်လည်းငိုချလိုက်
+                ခေါင်းလေးကိုပွတ်ပြီးမောင်ကချော့ပေးမယ်
+                မောင့်အချစ်ဆုံးလေးကို အမြန်ဆုံးတွေ့ချင်နေပြီ...
+                အာ.......ဘွား
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama read">- Read This When You Mad Me -</div>
+            <div class="note-body read">
+                ကဲ အသက်ကိုဖြေးဖြေးရှု,
+                မျက်နှာလေးက စူပုတ်မနေနဲ့
+                ဒီဘဲဘာတွေလုပ်ထားပြန်ပြီလဲ ငါ့မမကိုစိတ်ဆိုးအောင်
+                ပြန်တည့်သွားရင် လမ်းမကြီးမှာ မမကိုစိတ်ဆိုးအောင်မလုပ်တော့ပါဘူး အရမ်းချစ်တယ်လို့ အကျယ်ကြီးအော်ခိုင်းပစ် မမ
+                ခုတော့ စိတ်လေးလျှော့ပြီးနားထောင်ပေးနော်
+                I Love You so much Honey,
+                More than anyone and anything.
+                You're the only one I want for my whole life.
+                မောင်မမကိုစိတ်ဆိုးအောင်လုပ်မိရင်တောင်းပန်ပါတယ်
+                မမလည်းမောင့်ကိုအဆုံးရှုံးမခံနိုင်ဘူးမလား?
+                တူတူပဲလေကွာ အဲ့တာကြောင့် ပြဿနာတွေကိုအရမ်းကြီးလာတဲ့ထိမစောင့်ပဲ
+                အချိန်တိုတွင်း ငြိမ်းချမ်းရေးယူကြမယ်နော်
+                Let's not take the risk Honey
+                We can't lose each other.
+                တောင်းပန်ပါတယ် အချစ်လေးရေ ပြန်ခေါ်ကြရအောင်နော်
+            </div>
+        </div>
+
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၀ -</div>
             <div class="note-body">
@@ -469,7 +586,7 @@
                 English အဘိဓာန်မှာ Happiness<br>
                 မြန်မာ့ အဘိဓာန်မှာ ပျော်ရွှင်မှု<br>
                 ကျုပ်ရဲ့ အဘိဓာန်မှာ မမပေါ့ဗျာ<br>
-                မမဆိီက စစ်ပြေငြိမ်းစာရတော့မှ<br>
+                မမဆီက စစ်ပြေငြိမ်းစာရတော့မှ<br>
                 ကျုပ်မှာ အလုံးစုံစိတ်အေးရတယ်<br>
                 စစ်ကိုမလို၍ အချစ်ပိုမှသာ ကျုပ်တို့<br>
                 ထာဝရလက်တွဲနိုင်မယ် မဟုတ်လား<br>
@@ -547,6 +664,22 @@
                 ကျိန်းသေပေါက် မမဘေးကင်းရမယ်<br>
                 <br>
                 17.11.2023<br>
+            </div>
+        </div>
+
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၈ -</div>
+            <div class="note-body">
+                ကျုပ်တို့ချစ်သူဖြစ်တာ ၃လကြာခဲ့ပြီ
+                ကလေးလေးတွေလည်း ၃ယောက်ယူမတဲ့
+
+                ဒီအမျိုးသမီးလေးနဲ့ဆိုရင်
+                နှစ်တွေဘယ်လောက်ကြာကြာ ဘာတွေဖြစ်လာဖြစ်လာ
+                ကျုပ်ကတော့ သူ့လက်ကိုဆွဲပြီး
+                ဒီလောကကြီးထဲဖြတ်လျှောက်သွားရဲတယ်
+                မမကလည်း အဲ့လိုအမျိုးသမီးလေးပဲလေ
+                ကံကောင်းခြင်းအတိပေါ့ဗျာ...<br>
+                18.11.2023<br>
             </div>
         </div>
 
