--- a/loveletter.html
+++ b/loveletter.html
@@ -683,6 +683,20 @@
             </div>
         </div>
 
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၂၉ -</div>
+            <div class="note-body">
+                ထိုင်ပါ
+                ဒီသစ်ပင်ကြီးရဲ့ အရိပ်အောက်မှာ
+                သစ်ကိုင်းတွေကို ပွေ့ဖက်ထားပါ
+                ကောင်းကင်ပေါ်က ပျံသွားတဲ့ ငှက်တွေကို
+                လက်ပြနှုတ်ဆက်လိုက်ပါ
+                သစ်ရွက်တွေကို ယုယစွာနမ်းပါ
+                မင်းအိမ်ရောက်ပါပြီ
+                <br>19.11.2023<br>
+            </div>
+        </div>
+
         <!-- Add more notes here -->
     </div>
 
