--- a/loveletter.html
+++ b/loveletter.html
@@ -697,6 +697,22 @@
             </div>
         </div>
 
+        <div class="note">
+            <div class="note-title mama">- မမဖတ်ဖို့ ၃၀ -</div>
+            <div class="note-body">
+                ဝိုင်းစက်လှပသောတဲ့...<br>
+                အလှကိုပုံဖော်ရာမှာ ဝိုင်းစက်တာကိုသုံးကြတယ်<br>
+                နေလုံးကြီးကဝိုင်းတယ်, ထိုနည်းတူ<br>
+                လရော ကမ္ဘာရော...<br>
+                သူမရဲ့မျက်ဝန်းတွေရော<br>
+                သူမကိုယ်ပေါ်မှာကပ်တွယ်နေတဲ့ရင်နှစ်ဖိုရော<br>
+                သူမနဲ့ကျုပ်ရဲ့အရိုင်းဆန်တဲ့စိတ်တွေရော<br>
+                ဒီလောက်ဆိုရင် အလှတရားဟာ<br>
+                ဝိုင်းတယ်လို့ ကျုပ်ယုံပြီ<br>
+                <br>20.11.2023<br>
+            </div>
+        </div>
+
         <!-- Add more notes here -->
     </div>
 
