--- a/index.html
+++ b/index.html
@@ -2,6 +2,45 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>100th Days</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+
+    video {
+      width: 100%;
+      height: 100vh;
+      max-width: 360px;
+      object-fit: cover;
+    }
+  </style>
+</head>
+
+<body>
+  <video controls autoplay>
+    <source src="img/100days.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Love Counter</title>
@@ -76,4 +115,4 @@
     <script src="script.js"></script>
 </body>
 
-</html>
+</html> -->
