--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       overflow: hidden;
     }
 
-    video {
+    img {
       width: 100%;
       height: 100vh;
       max-width: 360px;
@@ -21,13 +21,11 @@
 </head>
 
 <body>
-  <video controls autoplay>
-    <source src="img/100days.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <img src="img/100days.gif" alt="Fullscreen Image">
 </body>
 
 </html>
+
 
 
 
